mongo db client with circuit breakers and tests
